1990-08-27  dickey@software.org

	* src/version.h: added better error recovery to ".ftree" read/write

	* src/ded.c:
	mods to make error-reporting routines work properly if they
	are called before screen is initialized, etc., to support mods
	to "ftree.c" for better error recovery.

	* src/ftree.c:
	modified 'ft_read()' and 'ft_write()' to try to recover from
	missing/corrupt ".ftree" file.

	* src/Makefile: really need to lint with apollo stuff, tho not portable

1990-08-27  ste_cm@software.org

	* src/Makefile: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1990-08-13  dickey@software.org

	* src/dedscan.c: lint

1990-08-13  ste_cm@software.org

	* src/dedscan.c: BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

1990-08-13  dickey@software.org

	* src/dedtype.c: lint

1990-08-13  ste_cm@software.org

	* src/dedtype.c: BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

1990-07-27  dickey@software.org

	* src/dedscan.c:
	modified 'argstat()' and 'dedstat()' so that 'dedstat()' does
	all of the stat-work.  Did this so that it calls 'statSCCS()'
	for all directory arguments, making 'l' command work properly.
	Also, this eliminates a redundant 'stat()' in 'argstat()'.

1990-05-23  dickey@software.org

	* src/ded.c: corrected bug in 'new_tree()' introduced in last change

1990-05-23  ste_cm@software.org

	* src/ded.c: BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

1990-05-23  dickey@software.org

	* src/ded.hlp: added CTL/E command for directory
	corrected omitted 'rcs' where 'sccs' is mentioned

1990-05-23  ste_cm@software.org

	* src/ded.hlp: BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

1990-05-23  dickey@software.org

	* src/version.h: corrections to edit-link 'E' command (for DSEE)
	corrections to path-prefix stripping in 'dedscan()'
	make "-t" option inherit into subprocesses of 'ded'.
	make CTL(E) command on directories set scan-pattern.

1990-05-23  ste_cm@software.org
