@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19900827
+MANIFEST for ded, version t19910401
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
